--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="header1 cid-s2TUBHIbqE mbr-fullscreen mbr-parallax-background" id="header1-w">
+<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="header1 cid-s2TUBHIbqE mbr-parallax-background" id="header1-w">
 
     
 
@@ -143,15 +143,15 @@
                     <h2 class="mbr-section-title pb-5 mbr-fonts-style display-2">JazerCode Services</h2>
                 </div>
                 <div class="clearfix"></div>
-                <div id="bootstrap-accordion_17" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
+                <div id="bootstrap-accordion_4" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
                     <div class="card">
                         <div class="card-header" role="tab" id="headingOne">
-                            <a role="button" class="panel-title collapsed text-black" data-toggle="collapse" data-core="" href="#collapse1_17" aria-expanded="false" aria-controls="collapse1">
+                            <a role="button" class="panel-title collapsed text-black" data-toggle="collapse" data-core="" href="#collapse1_4" aria-expanded="false" aria-controls="collapse1">
                                 <h4 class="mbr-fonts-style display-5">
                                     <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>LOGO</h4>
                             </a>
                         </div>
-                        <div id="collapse1_17" class="panel-collapse noScroll collapse " role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_17">
+                        <div id="collapse1_4" class="panel-collapse noScroll collapse " role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_4">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-5">We deliver the initial Vector Logo File Format of Logo Design within 2-3 business working days.</p>
                             </div>
@@ -159,13 +159,13 @@
                     </div>
                     <div class="card">
                         <div class="card-header" role="tab" id="headingTwo">
-                            <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_17" aria-expanded="false" aria-controls="collapse2">
+                            <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_4" aria-expanded="false" aria-controls="collapse2">
                                 <h4 class="mbr-fonts-style display-5">
                                     <span class="sign mbr-iconfont mbri-arrow-down inactive"></span> BRANDING</h4>
                             </a>
                             
                         </div>
-                        <div id="collapse2_17" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#bootstrap-accordion_17">
+                        <div id="collapse2_4" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#bootstrap-accordion_4">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-5">We deliver the initial Mock-up Images of Branding Design within 2-3 business working days.</p>
                             </div>
@@ -173,12 +173,12 @@
                     </div>
                     <div class="card">
                         <div class="card-header" role="tab" id="headingThree">
-                            <a role="button" class="collapsed text-black panel-title" data-toggle="collapse" data-core="" href="#collapse3_17" aria-expanded="false" aria-controls="collapse3">
+                            <a role="button" class="collapsed text-black panel-title" data-toggle="collapse" data-core="" href="#collapse3_4" aria-expanded="false" aria-controls="collapse3">
                                 <h4 class="mbr-fonts-style display-5">
                                     <span class="sign mbr-iconfont mbri-arrow-down inactive"></span> WEBSITE</h4>
                             </a>
                         </div>
-                        <div id="collapse3_17" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#bootstrap-accordion_17">
+                        <div id="collapse3_4" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#bootstrap-accordion_4">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-5">We deliver the initial testing of Website Design within 7-12 days with the latest and most powerful framework (Bootstrap 4).</p>
                             </div>
@@ -229,7 +229,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="LwghIs6t9HV3O/9yCPS++x6vrC5R6cTAtr8UyeGWlRR2+jN+LEgjqORkBr/gH7BI0f1B60JUHb+jVooXo5Y6PuTZgx9/kNsjU9lReKuiQ4/y4OSCgCZYpJgE1MPM255D">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="4Fd9TeS3bGu3N8EVNHH6SHkO5nvQRjLbtHh6ZPCcl0Nizf33oQFokQMnR8/+E+ES5MYnLyV6eBZ4dEPSJ2iaZaI41WcKR7EVcPUT10czwvcV1aK+Kr0RhUaDOQmESicn">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
